welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:11: error: expected class or object definition
for (c <- 1 to 4)
^PictureMono1:12: error: expected class or object definition
  faireV() 
  ^PictureMono1:14: error: Unmatched closing brace '}' ignored here
}
^